--- a/src/components/CurrentLifterBanner/CurrentLifterBanner.css
+++ b/src/components/CurrentLifterBanner/CurrentLifterBanner.css
@@ -8,7 +8,7 @@
 
 .top-lifter-banner {
   height: 67px;
-  width: 551px;
+  width: 750px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -23,9 +23,12 @@
 }
 
 .top-lifter-banner-column {
-  display: flex;
   flex-direction: column;
+  align-items: left;
   align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+  margin-left: 25px;
 }
 
 .name {
@@ -38,7 +41,7 @@
 }
 .team {
   color: #FFF;
-  font-family: "ProximaNovaCondensed";
+  font-family: "ProximaNovaCondensedSemi";
   font-size: 23px;
   font-style: normal;
   font-weight: 600;
@@ -65,25 +68,6 @@
   line-height: normal;
 }
 
-/* place */
-.info-row {
-  display: flex;
-  align-items: center;
-  gap: 5px; /* Space between label and component */
-  padding: 3px;
-  border: 1px solid white;
-  /* border-radius: 13px; */
-  background-color: #DDBD59;
-  justify-content: flex-end; /* Aligns items to the right within the row */
-}
-.info-label {
-  padding-left: 10px;
-  font-weight: bold;
-  font-size: 16px;
-  color: black; /* Adjust color based on your theme */
-  text-transform: uppercase;
-}
-
 
 
 
@@ -91,89 +75,40 @@
 .bottom-banner-row {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: flex-end;
+  margin-top: -60px;
+  width: auto;
 }
+
 
   .logo {
   height: 189px; /* 230-changed */
   width: 197px; /* 230-changed */
   flex-shrink: 0;
   aspect-ratio: 197/189;
-  margin-bottom: 90px;
   }
   
+
   .current-lifter-banner {
-  width: 688px;
+  width: 100%;
   height: 130px;
-  flex-shrink: 0;
   border: 1px solid #F6B31C;
   background: rgba(0, 0, 0, 0.40);
-  margin-left: 162px;
   display: grid;
-  margin-bottom: 70px; 
+  grid-template-columns: 1fr 2fr; /* Adjust column ratios for attempts and clock/lift */
   justify-content: center;
   align-items: center;
-  font-size: 21px; /* font base size */
-  /* font-family: Impact, Haettenschweiler, "Arial Black", sans-serif; */
-  position: relative; /* Add relative positioning */
-  overflow: visible; /* Allow content to overflow */
-  grid-template-rows: auto; /* lights - Adjusts dynamically */
-}
-
-/* not used  */
-/* .current-lifter-banner-column-one {
-  grid-column: span 3;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  white-space: nowrap;
-} */
-
-/* .current-lifter-banner-column-one img {
-  height: 230px;
-  width: 230px; 
-} */
-
-.current-lifter-banner-column-two {
-  padding: 45px; 
-  grid-column: span 6; 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  overflow: hidden;
-  white-space: nowrap; 
-    text-transform: uppercase;
-} 
-
-/*
-.current-lifter-banner-name,
-.current-lifter-banner-category {
-  height: 24px;
-} remove */
-
-/* make sure the inline-block div that react-fitty adds is centered vertically */
-/* .current-lifter-banner-name > div > div,
-.current-lifter-banner-category > div > div {
-  vertical-align: middle;
-} remove */
-
-.current-lifter-banner-lift-name {
-  height: 40px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-transform: uppercase;
+  font-size: 64px;
+  margin-left: -35px;
 }
 
 .current-lifter-banner-attempts {
   display: grid;
-  grid-template-columns: 80px 60px 60px 60px;
-  column-gap: 10px;
+  grid-template-columns: repeat(3, minmax(150px, 1fr));
+  column-gap: 38px;
   align-items: center;
-  height: 100%;
+  padding: 0 35px;
+  width: 100%;
 }
 .current-lifter-banner-attempt-current {
   color: blue;
@@ -185,11 +120,95 @@
   color: red;
 }
 
-.current-lifter-banner-column-three {
-  /* padding: 8px; remove */
-  grid-column: span 5; /* 7 */
-  overflow: hidden;
+.current-lifter-banner-attempt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 64px;
+  position: relative;
 }
+
+.current-lifter-banner-attempt::after {
+  content: "";
+  position: absolute;
+  right: -19px; 
+  top: 0;
+  bottom: 0;
+  width: 2px;
+  background-color: #F6B31C; 
+}
+
+.timer-lift-column {
+  width: 254px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-left: -12px;
+}
+
+.current-lifter-banner-lift-name {
+  height: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-family: "ProximaNovaCondensedBold";
+  font-size: 43px;
+  color:#FFF;
+}
+
+
+
+
+
+.new-banner-container {
+  display: flex;
+  align-items: center;
+  width: 130%;
+  gap: 20px;
+  margin-top: 20px;
+  margin-left: auto;
+}
+
+/* place/rank */
+.rank {
+  margin-left: auto;
+}
+
+.info-row {
+  width: 300px;
+  height: 67px;
+  display: flex;
+  align-items: center;
+  padding: 3px;
+  border: 1px solid #F6B31C;
+  background: rgba(0, 0, 0, 0.40);
+}
+.info-label {
+  font-size: 40px;
+  color: #FFF;
+  text-transform: uppercase;
+  border: 1px solid #F6B31C;
+  background: rgba(215, 13, 29, 0.80);
+  height: 67px;
+  flex-shrink: 0;
+  padding-top: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  display: flex;
+}
+.data-label {
+  padding-left: 10px;
+  font-size: 40px;
+  color: #FFF;
+  text-transform: uppercase;
+}
+
+
 
 
 
@@ -204,6 +223,8 @@
   justify-content: space-between;
   border: 2px solid #F6B31C;
   background: rgba(0, 26, 0, 0.40);
+  margin-bottom: 28px;
+  margin-left: 38px;
 }
 
 /* Hide the lights box when no active lights */
@@ -211,7 +232,7 @@
   display: none; /* Completely remove from layout */
 }
 
-/* light */
+/* cirle lights */
 .current-lifter-banner-light {
   width: 44.872px;
   height: 40.224px;
@@ -221,11 +242,9 @@
   background: rgba(0, 26, 0, 0.40);
   visibility: hidden; /* Hide by default */
 }
-
 .current-lifter-banner-light-red {
   background-color: red;
 }
-
 .current-lifter-banner-light-white {
   background-color: white;
 }
