--- a/src/components/PlaceChange/PlaceChange.css
+++ b/src/components/PlaceChange/PlaceChange.css
@@ -4,10 +4,16 @@
   display: flex;
   /* justify-content: center;
   align-items: center; */
-  font-size: 15px; /* 24 */
-
+  font-size: 40px; /* 24 */
   margin-left: 5px;
-  color: black;
+}
+
+.current-place {
+  color: white;
+}
+
+.possible-place {
+  color: #FBCD22;
 }
 
 .place-change .place-change-inner {
@@ -19,6 +25,6 @@
 .place-change .place-change-inner .icon {
   margin-left: 8px;
   margin-right: 8px;
-  width: 15px; /* 20 */
-  height: 15px; /* 20 */
+  width: 30px; /* 20 */
+  height: 30px; /* 20 */
 }
