--- a/src/components/CurrentLifterBanner/CurrentLifterBanner.css
+++ b/src/components/CurrentLifterBanner/CurrentLifterBanner.css
@@ -51,7 +51,7 @@
 
 .top-lifter-banner-weight {
   background: rgba(50, 115, 234, 0.80);
-  border: 1px solid #FFF;
+  border: 1px solid #F6B31C;
   height: 67px;
   flex-shrink: 0;
   padding-top: 15px;
