--- a/src/components/Standings/Standings.css
+++ b/src/components/Standings/Standings.css
@@ -1,14 +1,15 @@
 .standings {
   padding: 20px;
-  border: 1px solid black;
-  border-radius: 12px;
+  border: 1px solid #F6B31C;
+  background: rgba(0, 0, 0, 0.40);
   max-width: 100%;
   width: 100%;
   height: auto;
   margin-bottom: 20px;
-  font-weight: bold;
   box-sizing: border-box;
+  overflow: hidden;
 }
+
 
 .standings .standings-config-bar {
   display: grid;
@@ -17,14 +18,86 @@
   margin-bottom: 20px;
 }
 
+
+.standings-header {
+  height: 67px;
+  display: flex;
+  align-items: center;
+  background: rgba(215, 13, 29, 0.80);
+  color: white;
+  text-transform: uppercase;
+  border: 1px solid #F6B31C;
+  margin-bottom: 5px;
+}
+
+.standings-logo {
+  width: 132px;
+  height: 127px;
+  flex-shrink: 0;
+  aspect-ratio: 132/127;
+  margin-top: 60px;
+  margin-left: -42px;
+}
+
+.standings-column {
+  flex: 1;
+  flex-direction: column;
+  margin-left: -20px;
+}
+.standings-division {
+  font-size: 40px;
+  color: #ffffff;
+  margin-top: 10px;
+}
+.standings-status {
+  font-size: 30px;
+  font-family: "ProximaNovaCondensedSemi";
+  color: #ffffff;
+  margin-top: -5px;
+  margin-bottom: 5px;
+}
+.standings-weight {
+  background: rgba(50, 115, 234, 0.80);
+  border: 1px solid #F6B31C;
+  height: 67px;
+  padding: 15px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.weight {
+  color: #FFF;
+  font-size: 30px;
+}
+
+.sub-row {
+  border: 1px solid #F6B31C;
+  background: linear-gradient(90deg, rgba(215, 13, 29, 0.60) 0%, rgba(246, 179, 28, 0.60) 50%, rgba(50, 115, 234, 0.60) 100%);
+  padding: 8px;
+  overflow: hidden;
+  color: white;
+  font-weight: bold;
+  margin-bottom: 8px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: minmax(30px, 1fr) minmax(100px, 3fr) repeat(4, minmax(50px, 1fr));
+  gap: 5px;
+  padding-left: 70px;
+}
+
 .standings .standings-category-name,
 .standings .standings-row {
   padding: 8px;
   overflow: hidden;
-  background-color: #444444;
-  color: white;
+  background: rgba(0, 0, 0, 0.40);
+  color: #FBCD22;
   font-weight: bold;
   margin-bottom: 8px;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -34,14 +107,13 @@
 .standings .standings-row {
   display: grid;
   grid-template-columns: minmax(30px, 1fr) minmax(100px, 3fr) repeat(4, minmax(50px, 1fr));
-  gap: 10px;
-  padding-left: 20px;
+  gap: 5px;
+  padding-left: 85px;
 }
 
 .standings .standing-item {
   overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
   padding-right: 4px;
   display: flex;
   align-items: center;
@@ -50,12 +122,12 @@
 .standings .standings-row .standing-item {
   overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
   padding-right: 4px;
   display: flex;
   align-items: center;
 }
 
+/* make sure the inline-block div that react-fitty adds is centered vertically */
 .standings .standings-row .standing-item > div > div {
   vertical-align: middle;
 }
@@ -78,3 +150,4 @@
     text-align: center;
   }
 }
+
