--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
     red and green are used for bad/good lifts.
     red, blue, and yellow are used for fault cards.
    */
-  background-color: green;
+  background-color: orange;
 }
 
 body {
