--- a/src/components/Standing/Standing.css
+++ b/src/components/Standing/Standing.css
@@ -1,4 +1,4 @@
-.standing {
+.standings {
   padding: 20px;
   border: 1px solid #F6B31C;
   background: rgba(0, 0, 0, 0.40);
@@ -11,7 +11,7 @@
 }
 
 
-.standing .standing-config-bar {
+.standings .standings-config-bar {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 10px;
@@ -19,7 +19,7 @@
 }
 
 
-.standing-header {
+.standings-header {
   height: 67px;
   display: flex;
   align-items: center;
@@ -30,7 +30,7 @@
   margin-bottom: 5px;
 }
 
-.standing-logo {
+.standings-logo {
   width: 132px;
   height: 127px;
   flex-shrink: 0;
@@ -39,24 +39,24 @@
   margin-left: -42px;
 }
 
-.standing-column {
+.standings-column {
   flex: 1;
   flex-direction: column;
   margin-left: -20px;
 }
-.standing-division {
+.standings-division {
   font-size: 40px;
   color: #ffffff;
   margin-top: 10px;
 }
-.standing-status {
+.standings-status {
   font-size: 30px;
   font-family: "ProximaNovaCondensedSemi";
   color: #ffffff;
   margin-top: -5px;
   margin-bottom: 5px;
 }
-.standing-weight {
+.standings-weight {
   background: rgba(50, 115, 234, 0.80);
   border: 1px solid #F6B31C;
   height: 67px;
@@ -70,7 +70,7 @@
   font-size: 30px;
 }
 
-.standingsub-row {
+.sub-row {
   border: 1px solid #F6B31C;
   background: linear-gradient(90deg, rgba(215, 13, 29, 0.60) 0%, rgba(246, 179, 28, 0.60) 50%, rgba(50, 115, 234, 0.60) 100%);
   padding: 8px;
@@ -89,8 +89,8 @@
   padding-left: 70px;
 }
 
-.standing .standing-category-name,
-.standing .standing-row {
+.standings .standings-category-name,
+.standings .standings-row {
   padding: 8px;
   overflow: hidden;
   background: rgba(0, 0, 0, 0.40);
@@ -104,14 +104,14 @@
   flex-wrap: wrap;
 }
 
-.standing .standing-row {
+.standings .standings-row {
   display: grid;
   grid-template-columns: minmax(30px, 1fr) minmax(100px, 3fr) repeat(4, minmax(50px, 1fr));
   gap: 5px;
   padding-left: 85px;
 }
 
-.standing .standing-item {
+.standings .standing-item {
   overflow: hidden;
   white-space: nowrap;
   padding-right: 4px;
@@ -119,7 +119,7 @@
   align-items: center;
 }
 
-.standing .standing-row .standing-item {
+.standings .standings-row .standing-item {
   overflow: hidden;
   white-space: nowrap;
   padding-right: 4px;
@@ -128,24 +128,24 @@
 }
 
 /* make sure the inline-block div that react-fitty adds is centered vertically */
-.standing .standing-row .standing-item > div > div {
+.standings .standings-row .standing-item > div > div {
   vertical-align: middle;
 }
 
 /* resolutions */
 @media (max-width: 1920px) {
-  .standing .standing-row {
+  .standings .standings-row {
     grid-template-columns: minmax(30px, 1fr) minmax(80px, 2fr) repeat(4, minmax(50px, 1fr));
   }
 }
 
 @media (max-width: 1200px) {
-  .standing .standing-row {
+  .standings .standings-row {
     grid-template-columns: 1fr 2fr;
     flex-wrap: wrap;
   }
 
-  .standing .standing-item {
+  .standings .standing-item {
     width: 100%;
     text-align: center;
   }
