--- a/src/components/Ipf/Ipf.css
+++ b/src/components/Ipf/Ipf.css
@@ -85,8 +85,8 @@
   justify-content: center;
   flex-wrap: wrap;
   display: grid;
-  grid-template-columns: minmax(30px, 1fr) minmax(100px, 3fr) repeat(4, minmax(50px, 1fr));
-  gap: 5px;
+  grid-template-columns: minmax(30px, 2fr) minmax(100px, 3fr) minmax(50px, 1fr);
+  gap: 1px;
   padding-left: 70px;
   font-size: 30px;
   margin-left: 85px;
@@ -110,9 +110,9 @@
 
 .ipf .ipf-row {
   display: grid;
-  grid-template-columns: minmax(30px, 1fr) minmax(100px, 3fr) repeat(4, minmax(50px, 1fr));
+  grid-template-columns: minmax(30px, 1.8fr) minmax(100px, 3fr)  minmax(50px, 1fr);
   gap: 5px;
-  padding-left: 85px;
+  padding-left: 11.5rem;
 }
 
 .ipf .ipf-item {
@@ -121,6 +121,7 @@
   padding-right: 4px;
   display: flex;
   align-items: center;
+  margin-left: -55px;
 }
 
 .ipf .ipf-row .ipf-item {
