--- a/src/components/CurrentLifterBanner/CurrentLifterBanner.css
+++ b/src/components/CurrentLifterBanner/CurrentLifterBanner.css
@@ -18,7 +18,7 @@
   text-transform: uppercase;
   border: 1px solid #F6B31C;
   flex-shrink: 0;
-  margin-left: 197px;
+  margin-left: 172px;
   margin-bottom: 8px;
 }
 
@@ -99,7 +99,8 @@
   justify-content: center;
   align-items: center;
   font-size: 64px;
-  margin-left: -35px;
+  margin-left: -25px;
+  margin-bottom: 3px;
 }
 
 .current-lifter-banner-attempts {
