--- a/src/components/Forecasted/Forecasted.css
+++ b/src/components/Forecasted/Forecasted.css
@@ -41,9 +41,9 @@
 }
 
 .forecasted-status {
-  font-size: 40px;
+  font-size: 50px;
   color: #ffffff;
-  margin-top: -5px;
+  margin-top: 5px;
   margin-bottom: 5px;
 }
 
@@ -58,10 +58,11 @@
   height: 40px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   display: grid;
   grid-template-columns: 80px 1fr 100px;  gap: 5px;
+  font-size: 25px;
 }
 
 .forecasted-row {
@@ -70,10 +71,20 @@
   padding: 0.75rem 1rem;
   color: #FBCD22;
   background: rgba(0, 0, 0, 0.40);
+  font-size: 25px;
+}
+
+.forecasted-itemz {
+  flex: 1;
+  font-size: 25px;
+  text-align: left;
+  white-space: nowrap; /* Prevents text from wrapping */
+  margin-left: 35px;
 }
 
 .forecasted-item {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
