--- a/src/components/Forecasted/Forecasted.css
+++ b/src/components/Forecasted/Forecasted.css
@@ -30,7 +30,7 @@
 }
 
 .forecasted-header {
-  background: rgba(215, 13, 29, 0.8);
+  background: rgba(215, 13, 29);
   color: #fff;
   padding: 1rem;
   text-align: center;
@@ -49,7 +49,7 @@
 
 .subs-row {
   border: 1px solid #f6b31c;
-  background: rgba(50, 115, 234, 0.8);
+  background: rgba(50, 115, 234);
   padding: 8px;
   overflow: hidden;
   color: white;
