--- a/src/components/Standings/Standings.css
+++ b/src/components/Standings/Standings.css
@@ -2,7 +2,7 @@
   padding: 20px;
   border: 1px solid #F6B31C;
   background: rgba(0, 0, 0, 0.40);
-  width: 1920px;  /* 1200 width */
+  width: 1920px;  /* 1920 width */
   height: 1080px; /* 1080 height */
   margin-bottom: 20px;
   box-sizing: border-box;
@@ -22,7 +22,7 @@
   height: 67px;
   display: flex;
   align-items: center;
-  background: rgba(215, 13, 29, 0.80);
+  background: rgba(215, 13, 29);
   color: white;
   text-transform: uppercase;
   border: 1px solid #F6B31C;
@@ -57,7 +57,7 @@
   margin-bottom: 5px;
 }
 .standing-weight {
-  background: rgba(50, 115, 234, 0.80);
+  background: rgba(50, 115, 234);
   border: 1px solid #F6B31C;
   height: 67px;
   padding: 15px 20px;
@@ -67,12 +67,12 @@
 }
 .weight {
   color: #FFF;
-  font-size: 30px;
+  font-size: 35px;
 }
 
 .standingsub-row {
   border: 1px solid #F6B31C;
-  background: linear-gradient(90deg, rgba(215, 13, 29, 0.60) 0%, rgba(246, 179, 28, 0.60) 50%, rgba(50, 115, 234, 0.60) 100%);
+  background: linear-gradient(90deg, rgba(215, 13, 29) 0%, rgba(246, 179, 28) 50%, rgba(50, 115, 234) 100%);
   padding: 8px;
   overflow: hidden;
   color: white;
@@ -86,7 +86,7 @@
   display: grid;
   grid-template-columns: minmax(30px, 1fr) minmax(100px, 3fr) repeat(4, minmax(50px, 1fr));
   gap: 5px;
-  padding-left: 70px;
+  /* padding-left: 70px; */
   font-size: 30px;
   margin-left: 85px;
   padding-left: 16px;
