--- a/src/components/Forecasted/Forecasted.css
+++ b/src/components/Forecasted/Forecasted.css
@@ -8,8 +8,8 @@
   overflow: hidden; 
   height: 800px;
   padding: 20px;
-  border: 1px solid #f6b31c;
-  background: rgba(0, 0, 0, 0.4);
+  /* border: 1px solid #f6b31c;
+  background: rgba(0, 0, 0, 0.4); */
   border-radius: 4px;
   margin-bottom: 20px;
 }
