--- a/src/components/Forecasted/Forecasted.css
+++ b/src/components/Forecasted/Forecasted.css
@@ -2,14 +2,11 @@
   display: flex;
   flex-direction: column-reverse; 
   height: 100vh;
-  max-width: 100%;
-  width: 100%;
+  width: 600px;
   box-sizing: border-box;
   overflow: hidden; 
-  height: 800px;
+  height: 1000px;
   padding: 20px;
-  border: 1px solid #f6b31c;
-  background: rgba(0, 0, 0, 0.4);
   border-radius: 4px;
   margin-bottom: 20px;
 }
@@ -71,10 +68,11 @@
 .forecasted-row {
   display: grid;
   grid-template-columns: 80px 1fr 100px;
-  padding: 0.75rem 1rem;
+  padding-bottom: 6px;
+  padding-top: 5px;
   color: #FBCD22;
   background: rgba(0, 0, 0, 0.40);
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .forecasted-itemz {
@@ -88,7 +86,11 @@
 .forecasted-item {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+  text-align: left;
+  white-space: nowrap;
+  padding-left: 45px;
 }
 
 .forecasted-item:last-child {
